Fixed z-index of form parent component and set it to 20

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.MatrixBackground-moveableChildren-gkny3u {
+  z-index: 30  !important; 
+}
